# cpp-rest

./: .clang-format  .clang-tidy  CMakeLists.txt  README.MD  build.sh  conanfile.txt  config.h.in  formatFiles.sh  request.http
.github/workflows/: cmake-linux.yml  cmake-single-platform.yml
lib/restbed/source/corvusoft/restbed/: http.cpp  request.cpp  resource.cpp  response.cpp  rule.cpp  service.cpp  session.cpp  session_manager.cpp  settings.cpp  ssl_settings.cpp  string.cpp  uri.cpp  web_socket.cpp  web_socket_message.cpp
lib/restbed/source/corvusoft/restbed/detail/: http_impl.cpp  ipc_socket_impl.cpp  resource_impl.hpp  rule_engine_impl.hpp  service_impl.cpp  service_impl.hpp  session_impl.cpp  session_impl.hpp  socket_impl.cpp  web_socket_impl.cpp  web_socket_impl.hpp  web_socket_manager_impl.cpp
src/: CMakeLists.txt  main.cpp
src/controllers/: CMakeLists.txt  PromptController.cpp  PromptController.h
src/include/: ICRUDService.h  IMemoRepo.h  IPromptDAO.h  IPromptService.h  IRequestWrapper.h  IResourceWrapper.h  IRestController.h  ISessionWrapper.h  Paths.h
src/model/: CMakeLists.txt  CreatePromptDto.cpp  CreatePromptDto.h  Prompt.cpp  Prompt.h
src/repositories/: CMakeLists.txt  MemoRepo.cpp  MemoRepo.h
src/services/: CMakeLists.txt  CRUDService.cpp  CRUDService.h  RequestWrapper.cpp  RequestWrapper.h  ResourceWrapper.cpp  ResourceWrapper.h  SessionWrapper.cpp  SessionWrapper.h
src/services/prompt/: PromptMemoDataAccess.cpp  PromptMemoDataAccess.h  PromptService.cpp  PromptService.h
test/: CMakeLists.txt
test/controllers/: TestPromptController.cpp
test/mocks/internal/: MockCRUDService.h  MockIPromptDAO.h  MockPrompt.h  MockPromptService.h
tests/: CMakeLists.txt
tests/controllers/: TestPromptController.cpp
tests/mocks/internal/: MockCRUDService .h  MockCRUDService.h  MockIPromptDAO.h  MockPrompt.h  MockPromptService.h
